--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
         <h1><strong>黃友慧 Elly Huang</strong></h1>
         <h2><em><a href="https://www.yourator.co/r/a82b8c59-8a8b-4c1a-b1e6-0433fcfddbc6" target="_blank">我的履歷</a></em></h2>
+        <h2><em><a href="https://www.youtube.com/watch?v=OfAip6iFgv4" target="_blank">影片介紹</a></em></h2>
         
         <hr size="3">
 
